# QNotification

./: CMakeLists.txt  README.md  org.freedesktop.Notifications.xml
include/: QNotification  qnotification.h
src/: qnotification.cpp  qnotification_p.h  qnotificationmanager.h  qnotificationmanager_mac.mm  qnotificationmanager_win.cpp  qnotificationmanager_xdg.cpp
